Numbered the constraints in the formulation and in the optimization model

--- a/docs/diet_problem.ipynb
+++ b/docs/diet_problem.ipynb
@@ -58,10 +58,10 @@
    "source": [
     "### Constraints\n",
     "The only constraint of the diet problem is to ensure that the intake of each nutrient $j$ is within the recommended range, which we split into two constraints.\n",
-    "* Ensure minimum recommended intake of nutrients:\n",
+    "* C1) Ensure minimum recommended intake of nutrients:\n",
     "$$\\sum_i nq_{ij}x_i \\geq nl_j, \\quad \\forall j.$$\n",
     "\n",
-    "* Ensure maximum recommended intake of nutrients:\n",
+    "* C2) Ensure maximum recommended intake of nutrients:\n",
     "$$\\sum_i nq_{ij}x_i \\leq nu_j, \\quad \\forall j.$$"
    ]
   },
