Updated some formatting on the formulation

--- a/docs/diet_problem.ipynb
+++ b/docs/diet_problem.ipynb
@@ -33,8 +33,8 @@
     "### Input Data Model\n",
     "\n",
     "#### Set of indices\n",
-    "- $I$ - Set of foods.  \n",
-    "- $J$ - Set of nutrients.\n",
+    "- $I$ - Collection of foods.  \n",
+    "- $J$ - Collection of nutrients.\n",
     "\n",
     "#### Parameters\n",
     "* $c_i$ - Per unit cost of food $i$.\n",
@@ -59,10 +59,10 @@
     "### Constraints\n",
     "The only constraint of the diet problem is to ensure that the intake of each nutrient $j$ is within the recommended range, which we split into two constraints.\n",
     "* C1) Ensure minimum recommended intake of nutrients:\n",
-    "$$\\sum_i nq_{ij}x_i \\geq nl_j, \\quad \\forall j.$$\n",
+    "$$\\sum_i nq_{ij} \\cdot x_i \\geq nl_j, \\quad \\forall j.$$\n",
     "\n",
     "* C2) Ensure maximum recommended intake of nutrients:\n",
-    "$$\\sum_i nq_{ij}x_i \\leq nu_j, \\quad \\forall j.$$"
+    "$$\\sum_i nq_{ij} \\cdot x_i \\leq nu_j, \\quad \\forall j.$$"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "source": [
     "### Objective\n",
     "The objective is to minimize the total cost of the diet.\n",
-    "$$\\min{\\sum_i c_ix_i}.$$"
+    "$$\\min{\\sum_i c_i \\cdot x_i}.$$"
    ]
   },
   {
@@ -82,9 +82,9 @@
     "$$\n",
     "\\begin{eqnarray}\n",
     "\\begin{array}{rcl}\n",
-    "& \\min & \\sum_i c_ix_i\\\\\n",
-    "& \\text{s.t.}& \\sum_i nq_{ij}x_i \\geq nl_j, \\quad \\forall j,\\\\\n",
-    "&& \\sum_i nq_{ij}x_i \\leq nu_j, \\quad \\forall j,\\\\\n",
+    "& \\min & \\sum_i c_i \\cdot x_i\\\\\n",
+    "& \\text{s.t.}& \\sum_i nq_{ij} \\cdot x_i \\geq nl_j, \\quad \\forall j,\\\\\n",
+    "&& \\sum_i nq_{ij} \\cdot x_i \\leq nu_j, \\quad \\forall j,\\\\\n",
     "&& x_i \\geq 0, \\quad \\forall i.\n",
     "\\end{array}\n",
     "\\end{eqnarray}\n",
@@ -108,9 +108,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
